src/objects/ACCL__Unit_of_Measure__c.object
<CustomObject>
    <description>Holds the details od the units of measure (logistic unit) of a product.</description>
    <fields>
        <fullName>ACCL__Check_isConsumer_Unique__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used internally for validation.</description>
        <label>is Consumer Unit</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ACCL__Check_isOrder_Unique__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used internally for validation.</description>
        <label>is Order Unit</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ACCL__Check_isPrice_Unique__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used internally for validation.</description>
        <label>is Price Unit</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ACCL__GTIN__c</fullName>
        <description>Global trade item number.</description>
        <inlineHelpText>Global Trade Item Number</inlineHelpText>
        <label>GTIN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Is_Consumer_Unit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Consumer unit.</description>
        <label>Is Consumer Unit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Is_Order_Unit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Default order unit.</description>
        <inlineHelpText>Unit of Measure is default order unit.</inlineHelpText>
        <label>Is Order Unit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Is_Price_Unit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Price unit.</description>
        <inlineHelpText>Unit of Measure is default price unit.</inlineHelpText>
        <label>Is Price Unit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Order_Ability__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Unit of Measure can be ordered.</description>
        <inlineHelpText>Unit of Measue is allowed for ordering.</inlineHelpText>
        <label>Order Ability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Pieces_per_Smallest_Unit__c</fullName>
        <description>Number of pieces of smallest unit contained in this unit.</description>
        <label>Pieces per Smallest Unit</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Pieces_per_parent_unit__c</fullName>
        <description>Number of pieces of this unit of measure are contained in the parent unit of measure.</description>
        <label>Pieces per Parent Unit</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Product__c</fullName>
        <description>Reference to product.</description>
        <label>Product</label>
        <referenceTo>ACCL__Product__c</referenceTo>
        <relationshipLabel>Units of Measure</relationshipLabel>
        <relationshipName>Units_of_Measure</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACCL__Record_Link__c</fullName>
        <description>Link to the unit of measure record.</description>
        <formula>HYPERLINK(&quot;/&quot; &amp;Id, /*IMAGE(&quot;/img/func_icons/util/lookup20.gif&quot;, &quot;View&quot;)*/&quot;View&quot;, &quot;_top&quot;)</formula>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Rounding_Rule__c</fullName>
        <description>Defines the rounding rule to be applied for the target unit of measure.</description>
        <label>Rounding Rule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                    <default>true</default>
                    <label>Never</label>
                </value>
                <value>
                    <fullName>Up</fullName>
                </value>
                <value>
                    <fullName>Down</fullName>
                </value>
                <value>
                    <fullName>Nearest</fullName>
                </value>
                <value>
                    <fullName>UserExit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Rounding_Target__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls if the unit of measure is considered for rounding quantity.</description>
        <label>Rounding Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Sort_Validation__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used internally for validation.</description>
        <label>Sort</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ACCL__Sort__c</fullName>
        <description>Sequence of unit of measures of a product (from smallest unit to largest unit).</description>
        <label>Sort</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Unit_Type_Validation__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used internally for validation.</description>
        <label>Unit Type</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ACCL__Unit_Type__c</fullName>
        <description>Type of the unit of measure.</description>
        <label>Unit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SalesUnit</fullName>
                    <default>true</default>
                    <label>SalesUnit</label>
                </value>
                <value>
                    <fullName>Layer</fullName>
                </value>
                <value>
                    <fullName>Pallet</fullName>
                </value>
                <value>
                    <fullName>ConsumerUnit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Volume__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Item volume used for complex pricing.</description>
        <label>Volume</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Weight__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Item weight used for complex pricing.</description>
        <label>Weight</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MDLZ_ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MDLZ_SAPInterfaceField1__c</fullName>
        <description>SAP Interface Field 1</description>
        <label>SAP Interface Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Unit of Measure</label>
    <nameField>
        <displayFormat>UoM-{00000}</displayFormat>
        <label>Unit of Measure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Units of Measure</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ACCL__Order_Ability_depend_on_IsOrderUnit_is_c</fullName>
        <active>true</active>
        <errorConditionFormula>ACCL__Is_Order_Unit__c = true  &amp;&amp;  ACCL__Order_Ability__c  &lt;&gt; true</errorConditionFormula>
        <errorDisplayField>ACCL__Order_Ability__c</errorDisplayField>
        <errorMessage>Order Ability must be checked if the Is Order Unit is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Rounding_Rule_Validation</fullName>
        <active>true</active>
        <description>Round Rule must be &apos;Never&apos; if the Unit of Measure has the highest Sort value.</description>
        <errorConditionFormula>(ACCL__Product__r.ACCL__Rounding_Rule_Validation__c &lt;=  ACCL__Sort__c  ||  ISBLANK( ACCL__Product__r.ACCL__Rounding_Rule_Validation__c )  )  &amp;&amp;  NOT(ISPICKVAL(ACCL__Rounding_Rule__c, &apos;Never&apos;))</errorConditionFormula>
        <errorMessage>Round Rule must be &apos;Never&apos; if the Unit of Measure has the highest Sort value.</errorMessage>
    </validationRules>
</CustomObject>